# exs-plugin-example

./: .gitignore  plugin.toml  pyproject.toml
example_plugin/: __init__.py  config.py  path.py
example_plugin/modules/: hello_world.py
example_plugin/services/: my_service.py
example_plugin/settings/: hello.py
example_plugin/styles/: main.scss
