[project]
name = "example-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exs-core>=0.1.1",
    "ignis @ git+https://git@github.com/ignis-sh/ignis.git",
]

[tool.uv.sources]
ignis = { git = "https://github.com/ignis-sh/ignis.git" }
